--- a/fly.toml
+++ b/fly.toml
@@ -12,6 +12,10 @@ primary_region = "iad"
 [env]
   PORT = "5000"
 
+[processes]
+  app = "gunicorn main:app --bind 0.0.0.0:5000"
+
+
 [http_service]
   internal_port = 5000
   force_https = true
